--- a/bundle/_config.yml
+++ b/bundle/_config.yml
@@ -18,16 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Birkir Fanndal Sturluson
+email: s232729@dtu.dk
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Here you can find some of the projects I'm working on at DTU.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://birkirfanndal.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+instagram_username: birkirfanndal
+github_username:  birkir fanndal
 
 # Build settings
 theme: minima
