--- a/bundle/_config.yml
+++ b/bundle/_config.yml
@@ -23,7 +23,7 @@ email: s232729@dtu.dk
 description: >- # this means to ignore newlines until "baseurl:"
   Here you can find some of the projects I'm working on at DTU.
 baseurl: "/birkirfanndal.github.io/" # the subpath of your site, e.g. /blog
-url: "https://birkirfanndal.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "birkirfanndal.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: birkirfanndal
 github_username:  birkirfanndal
 
